--- a/index.html
+++ b/index.html
@@ -173,6 +173,30 @@
 </tr>
 </tbody>
 </table>
+
+<table>
+<thead>
+<tr>
+<th>TAG1</th>
+<th>TAG2</th>
+<th>HIDES ALL BUT SHOWS SOME THING(S)</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>`hide-all-but-topic-body`</td>
+<td>`show-timeline`</td>
+<td>[Hides Everything But TOC/Topic Timeline]</td>
+</tr>
+<tr>
+<td>???</td>
+<td>???</td>
+<td>[???]</td>
+</tr>
+</tbody>
+</table>
+
+  
 <table>
 <thead>
 <tr>
