--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
 </tr>
 </tbody>
 </table>
+
+  
 <table>
 <thead>
 <tr>
@@ -174,6 +176,7 @@
 </tbody>
 </table>
 
+  
 <table>
 <thead>
 <tr>
@@ -184,8 +187,8 @@
 </thead>
 <tbody>
 <tr>
-<td>`hide-all-but-topic-body`</td>
-<td>`show-timeline`</td>
+<td>hide-all-but-topic-body</td>
+<td>show-timeline</td>
 <td>[Hides Everything But TOC/Topic Timeline]</td>
 </tr>
 <tr>
